# monomod

./: .gitignore  CLAUDE.md  README.md
driver/: pyproject.toml
driver/examples/: stream_matplotlib.py  stream_print.py  stream_pyqtgraph.py
driver/src/monomod/: __init__.py  ads1293.py  config.py  control.py  device.py  discovery.py  protocol.py  receiver.py
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/bringup/lis3dh_test/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/bringup/lis3dh_test/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/components/ads1293/: CMakeLists.txt
firmware/components/ads1293/include/: ads1293.h
firmware/components/ads1293/src/: ads1293.c
firmware/components/icm20948/: CMakeLists.txt
firmware/components/icm20948/include/: icm20948.h
firmware/components/icm20948/src/: icm20948.c
firmware/components/ina_emg/: CMakeLists.txt
firmware/components/ina_emg/include/: ina_emg.h
firmware/components/ina_emg/src/: ina_emg.c
firmware/components/lis3dh/: CMakeLists.txt
firmware/components/lis3dh/include/: lis3dh.h
firmware/components/lis3dh/src/: lis3dh.c
firmware/components/monomod_board/: CMakeLists.txt  Kconfig
firmware/components/monomod_board/include/: board_pins.h
firmware/components/monomod_core/: CMakeLists.txt
firmware/components/monomod_core/include/: ring_buffer.hpp  timestamp.hpp
firmware/components/monomod_drivers/: CMakeLists.txt
firmware/components/monomod_net/: CMakeLists.txt
firmware/lis3dh_node/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/lis3dh_node/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/: CMakeLists.txt  config.hpp  main.cpp
firmware/main/network/: network_manager.cpp  network_manager.hpp
firmware/main/tasks/: acq_task.cpp  acq_task.hpp  imu_task.cpp  imu_task.hpp  tx_task.cpp  tx_task.hpp
gui/: app.py  lsl_streamer.py  monomod_config.yaml  recorder.py  requirements.txt  run_gui.sh
provision/: README.md  provision_wifi.py  wifi_config.yaml
tests/: conftest.py  test_clock.py  test_config.py  test_protocol.py  test_recorder.py
(+8 files in other folders)
