idf_component_register(
    SRCS
        "main.cpp"
        "tasks/acq_task.cpp"
        "tasks/tx_task.cpp"
        "tasks/imu_task.cpp"
        "network/network_manager.cpp"
    INCLUDE_DIRS
        "."
        "tasks"
        "network"
    REQUIRES
        ads1293
        ina_emg
        lis3dh
        icm20948
        monomod_protocol
        monomod_core
        monomod_drivers
        esp_timer
        esp_wifi
        esp_netif
        mdns
        lwip
        nvs_flash
        driver
)
